--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,15 @@
 
-/* 
+img {
+    height: 325px;
+    width:500px;
+    object-fit: cover;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+ul {
+    margin-right: 140px;
+}
 
-*/
+#str {
+    padding-left: 140px;
+}
+
